--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset='utf-8'>
+	<meta http-equiv='Content-Type' content='text/html; charset=utf-8'>
+	<meta name='keyword' content='mE2, heroku'>
+	<meta name='description' content='mE2'>
+	<meta name='author' content='XiaoTie'>
 	<title><%= full_title(yield(:title)) %></title>
 	<%= stylesheet_link_tag "application", media: "all",
 																				 "data-turbolinks-track" => true %>
