--- a/app/views/user_mailer/verify_email.text.erb
+++ b/app/views/user_mailer/verify_email.text.erb
@@ -1,8 +1,11 @@
-Welcome to example.com, <%= @user.name %>
+Welcome to mE2, <%= @user.name %>
 ===============================================
 
 You have successfully create a account at mE2,
 your username is: <%= @user.email %>.
 
-To login to the site, just follow this link: <%= @url %>.
+The purpose of this letter is to verify that
+ you are the owner of the email which you filled in.
+
+To finish sign up, just follow this link: <%= @url %>.
 Thanks for joining and have a great day!
