--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,8 +1,11 @@
-<div class="center hero-unit">
+<div class="jumbotron">
 	<h1>Welcome to the mE2</h1>
 	<p>
 		This is the home page for this application.
 	</p>
+	<p>
+		Its a simple Microbolg.
+	</p>
 
-	<%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
+	<%= link_to "Sign up now!", signup_path, class: "btn btn-primary btn-lg" %>
 </div>
