--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,31 +1,43 @@
-<header class="navbar navbar-fixed-top navbar-inverse">
-	<div class="navbar-inner">
-		<div class="container">
-			<%= link_to "mE2", root_path, id: "logo" %>
-			<nav>
-				<ul class="nav pull-right">
-					<li><%= link_to "Home",    root_path %></li>
-					<li><%= link_to "Help",    help_path %></li>
-					<% if signed_in? %>
-						<li><%= link_to "Users", '#' %></li>
-            <li id="fat-menu" class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                Account <b class="caret"></b>
-              </a>
-              <ul class="dropdown-menu">
-                <li><%= link_to "Profile", current_user %></li>
-                <li><%= link_to "Settings", '#' %></li>
-                <li class="divider"></li>
-                <li>
-                  <%= link_to "Sign out", signout_path, method: "delete" %>
-                </li>
-              </ul>
-            </li>
-					<% else %>
-						<li><%= link_to "Sign in", signin_path %></li>
-					<% end -%>
-				</ul>
-			</nav>
+<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+	<div class="container">
+		<div class="navbar-header">
+			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+				<span class="sr-only">Toggle navigation</span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+			</button>
+			<%= link_to "mE2", root_path, id: "logo", class: "navbar-brand" %>
 		</div>
+		<nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
+			<form class="navbar-form navbar-right" role="search">
+				<div class="form-group">
+					<input type="text" class="form-control" placeholder="Search Name/Account/Post">
+				</div>
+				<button type="submit" class="btn btn-default">Search</button>
+			</form>
+			<ul class="nav navbar-nav navbar-right">
+				<li><%= link_to "Home", root_path %></li>
+				<li><%= link_to "Help", help_path %></li>
+				<% if signed_in? %>
+				<li><%= link_to "Users", '#' %></li>
+				<li class="dropdown">
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown">
+						<%= current_user.name %> <b class="caret"></b>
+					</a>
+					<ul class="dropdown-menu">
+						<li><%= link_to "Profile", current_user %></li>
+						<li><%= link_to "Settings", '#' %></li>
+						<li class="divider"></li>
+						<li>
+							<%= link_to "Sign out", signout_path, method: "delete" %>
+						</li>
+					</ul>
+				</li>
+				<% else %>
+				<li><%= link_to "Sign in", signin_path %></li>
+				<% end -%>
+			</ul>
+		</nav><!--/.navbar-collapse -->
 	</div>
-</header>
+</div>
