--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,9 +6,10 @@
 	<meta name='keyword' content='mE2, heroku'>
 	<meta name='description' content='mE2'>
 	<meta name='author' content='XiaoTie'>
+	<%= favicon_link_tag '/favicon.ico' %>
 	<title><%= full_title(yield(:title)) %></title>
 	<%= stylesheet_link_tag "application", media: "all",
-																				 "data-turbolinks-track" => true %>
+	"data-turbolinks-track" => true %>
 	<%= javascript_include_tag "application", "data-turbolinks-track" => true %>
 	<%= csrf_meta_tags %>
 	<%= render 'layouts/shim' %>
@@ -20,9 +21,12 @@
 			<%= content_tag(:div, value, class: "alert alert-#{key}") %>
 		<% end -%>
 		<%= yield %>
+		<hr>
 		<%= render 'layouts/footer' %>
-		<%= debug(params) if Rails.env.development? %>
+		<div class="pull-left"></div>
 	</div>
-</body>
+	<div class="container">
+		<%= debug(params) if Rails.env.development? %>
+	</div>		
 </body>
 </html>
