--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,8 +1,9 @@
 <% provide(:title, 'Help') %>
 <h1>Help</h1>
 <p>
-	Get help on the Ruby on Rails Tutorial at the
-	<a href="http://railstutorial.org/help">Rails Tutorial help page</a>.
-	To get help on this sample app, see the
-	<a href="http://railstutorial.org/book">Rails Tutorial book</a>.
+	Get help on the Bootstrap at the
+	<a href="http://getbootstrap.com/css/">Bootstrap CSS page</a> and
+	<a href="http://getbootstrap.com/components/">Bootstrap Components page</a>.
+	To get help on this app, see 
+	<a href="http://wudixiaotie.iteye.com/">My blog</a>.
 </p>
