--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,22 +1,45 @@
 <%= provide(:title, 'Sign up') %>
-<h1>Sign up</h1>
+<h1 class="text-center">Sign up</h1>
 <div class="row">
-	<div class="span6 offset3">
-		<%= form_for @user do |f| %>
+	<div class="col-sm-offset-3 col-sm-6">
+
+		<%= form_for @user, html: { class: "form-horizontal", role: 'form' } do |f| %>
 		<%= render 'shared/error_messages' %>
-		<%= f.label :name %>
-		<%= f.text_field :name %>
 
-		<%= f.label :email %>
-		<%= f.text_field :email %>
+		<div class="form-group">
+			<%= f.label :name, class: "col-sm-3 control-label" %>
+			<div class="col-sm-9">
+				<%= f.text_field :name, class: 'form-control', placeholder: 'Enter name' %>
+			</div>
+		</div>
 
-		<%= f.label :password %>
-		<%= f.password_field :password %>
+		<div class="form-group">
+			<%= f.label :email, class: "col-sm-3 control-label" %>
+			<div class="col-sm-9">
+				<%= f.text_field :email, class: 'form-control', placeholder: 'Enter email' %>
+			</div>
+		</div>
 
-		<%= f.label :password_confirmation, 'Confirmation' %>
-		<%= f.password_field :password_confirmation %>
+		<div class="form-group">
+			<%= f.label :password, class: "col-sm-3 control-label" %>
+			<div class="col-sm-9">
+				<%= f.password_field :password, class: 'form-control', placeholder: 'Enter password' %>
+			</div>
+		</div>
 
-		<%= f.submit 'Create my account', class: 'btn btn-large btn-primary' %>
+		<div class="form-group">
+			<%= f.label :password_confirmation, 'Confirmation', class: "col-sm-3 control-label" %>
+			<div class="col-sm-9">
+				<%= f.password_field :password_confirmation, class: 'form-control', placeholder: 'Enter confirmation' %>
+			</div>
+		</div>
+
+		<div class="form-group">
+			<div class="col-sm-offset-3 col-sm-9">
+				<%= f.submit 'Create my account', class: 'btn btn-lg btn-primary' %>
+			</div>
+		</div>
 		<% end -%>
+
 	</div>
 </div>
