--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <%= provide(:title, @user.name) %>
 <div class="row">
-	<aside class="span4">
+	<aside class="col-sm-4 col-xs-12">
 		<section>
 			<h1>
 				<%= gravatar_for @user %>
