--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,6 +27,8 @@
 	</div>
 	<div class="container">
 		<%= debug(params) if Rails.env.development? %>
+		<%#= debug(current_user.sign_in_token) if Rails.env.development? %>
+		<%#= debug(current_user.send_verify_email) if !current_user.nil? %>
 	</div>
 </body>
 </html>
