--- a/app/views/user_mailer/verify_email.text.erb
+++ b/app/views/user_mailer/verify_email.text.erb
@@ -7,5 +7,6 @@ your username is: <%= @user.email %>.
 The purpose of this letter is to verify that
  you are the owner of the email which you filled in.
 
-To finish sign up, just follow this link: <%= @url %>.
+To finish sign up, just follow this link:
+ <%= verify_email_url(@user.verify_email_token) %>.
 Thanks for joining and have a great day!
