Finish reset password

--- a/app/views/password_reset/new.html.erb
+++ b/app/views/password_reset/new.html.erb
@@ -1,2 +1,32 @@
-<h1>PasswordReset#new</h1>
-<p>Find me in app/views/password_reset/new.html.erb</p>
+<% provide(:title, 'Reset password') %>
+<h1 class="text-center">Reset password</h1>
+<div class="row">
+	<div class="col-sm-offset-3 col-sm-6">
+
+		<%= form_tag password_reset_index_path, class: "form-horizontal",
+																						role: 'form' do %>
+
+			<div class="form-group">
+				<div class="col-sm-10 col-sm-offset-2">
+					<p>Enter your email address, then we will send you a email.</p>
+					<p>It contents a password reset link for you.</p>
+				</div>
+			</div>
+
+			<div class="form-group">
+				<%= label_tag :email, nil, class: "col-sm-2 control-label" %>
+				<div class="col-sm-10">
+					<%= email_field_tag :email, nil, class: 'form-control',
+																					 placeholder: 'Enter email' %>
+				</div>
+			</div>
+
+			<div class="form-group">
+				<div class="col-sm-10 col-sm-offset-2">
+					<%= submit_tag 'Send email', class: 'btn btn-info btn-lg' %>
+				</div>
+			</div>
+		<% end -%>
+
+	</div>
+</div>
