--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -16,7 +16,7 @@
 		<div class="form-group">
 			<%= f.label :email, class: "col-sm-3 control-label" %>
 			<div class="col-sm-9">
-				<%= f.text_field :email, class: 'form-control', placeholder: 'Enter email' %>
+				<%= f.email_field :email, class: 'form-control', placeholder: 'Enter email' %>
 			</div>
 		</div>
 
