--- a/app/views/verify_email/new.html.erb
+++ b/app/views/verify_email/new.html.erb
@@ -5,5 +5,5 @@
 	<p>Your email account is <%= content_tag :b, session[:user_email] %></p>
 	<%= hidden_field_tag 'user_email', session[:user_email] %></p>
 	<p>You havn't verify your email account. Please click this button to resend a verify email.</p>
- 	<p><%= submit_tag 'resend email', class: 'btn btn-info btn-lg' %></p>
+ 	<p><%= submit_tag 'Resend email', class: 'btn btn-info btn-lg' %></p>
 <% end -%>
