--- a/app/views/password_reset/edit.html.erb
+++ b/app/views/password_reset/edit.html.erb
@@ -31,7 +31,7 @@
 
 			<div class="form-group">
 				<div class="col-sm-10 col-sm-offset-2">
-					<%= f.submit 'Send email', class: 'btn btn-info btn-lg' %>
+					<%= f.submit 'Reset password', class: 'btn btn-info btn-lg' %>
 				</div>
 			</div>
 		<% end -%>
