--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -23,6 +23,14 @@ body {
 	}
 }
 
+.header-avatar {
+border-radius: 50%;
+border: 3px solid #fff;
+margin-left: -15px;
+margin-top: -5px;
+width: 30px;
+}
+
 /* footer */
 
 footer {
@@ -43,4 +51,19 @@ footer {
 
 .field_with_errors {
   @extend .has-error;
+}
+
+/* Users index */
+
+.users {
+  list-style: none;
+  margin: 0;
+  li {
+    overflow: auto;
+    padding: 10px 0;
+    border-top: 1px solid $gray-lighter;
+    &:last-child {
+      border-bottom: 1px solid $gray-lighter;
+    }
+  }
 }
