--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -20,10 +20,14 @@
 				<li><%= link_to "Home", root_path %></li>
 				<li><%= link_to "Help", help_path %></li>
 				<% if signed_in? %>
-				<li><%= link_to "Users", '#' %></li>
+				<li><%= link_to "Users", users_path %></li>
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">
-						<%= current_user.name %> <b class="caret"></b>
+						<!-- avatar -->
+						<span>
+							<%= gravatar_for(current_user, size: 30, class: 'header-avatar') %>
+							<%= current_user.name %> <b class="caret"></b>
+						</span>
 					</a>
 					<ul class="dropdown-menu">
 						<li><%= link_to "Profile", current_user %></li>
