--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,6 +27,7 @@
 	</div>
 	<div class="container">
 		<%= debug(params) if Rails.env.development? %>
+		<%= debug(current_user.admin) if Rails.env.development? %>
 	</div>
 </body>
 </html>
