--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -4,35 +4,8 @@
 	<div class="col-sm-offset-3 col-sm-6">
 
 		<%= form_for @user, html: { class: "form-horizontal", role: 'form' } do |f| %>
-		<%= render 'shared/error_messages' %>
 
-		<div class="form-group">
-			<%= f.label :name, class: "col-sm-3 control-label" %>
-			<div class="col-sm-9">
-				<%= f.text_field :name, class: 'form-control', placeholder: 'Enter name' %>
-			</div>
-		</div>
-
-		<div class="form-group">
-			<%= f.label :email, class: "col-sm-3 control-label" %>
-			<div class="col-sm-9">
-				<%= f.email_field :email, class: 'form-control', placeholder: 'Enter email' %>
-			</div>
-		</div>
-
-		<div class="form-group">
-			<%= f.label :password, class: "col-sm-3 control-label" %>
-			<div class="col-sm-9">
-				<%= f.password_field :password, class: 'form-control', placeholder: 'Enter password' %>
-			</div>
-		</div>
-
-		<div class="form-group">
-			<%= f.label :password_confirmation, 'Confirmation', class: "col-sm-3 control-label" %>
-			<div class="col-sm-9">
-				<%= f.password_field :password_confirmation, class: 'form-control', placeholder: 'Enter confirmation' %>
-			</div>
-		</div>
+		<%= render 'fields', form: f %>
 
 		<div class="form-group">
 			<div class="col-sm-offset-3 col-sm-9">
