--- a/app/views/user_mailer/password_reset_email.text.erb
+++ b/app/views/user_mailer/password_reset_email.text.erb
@@ -1,11 +1,10 @@
-Dear, <%= @user.name %>
+Dear, #{@user.name}
 ===============================================
 
-You mE2 email account is: <%= @user.email %>.
+You mE2 email account is: #{@user.email}.
 
-The purpose of this letter is to help you
- to reset your password.
+The purpose of this letter is to help you to reset your password.
 
-To do that, just follow this link:
- <%= edit_password_reset_url(@user.password_reset_token) %>.
+To do that, just follow this link: #{edit_password_reset_url(@user.password_reset_token)}.
+
 Thanks for seeing this letter and have a great day!
