--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -14,21 +14,21 @@ body {
 /* header */
 
 #logo {
-	font-size: 1.7em;
-	color: #fff;
-	font-weight: bold;
-	&:hover {
-		color: #fff;
-		text-decoration: none;
-	}
+  font-size: 1.7em;
+  color: #fff;
+  font-weight: bold;
+  &:hover {
+    color: #fff;
+    text-decoration: none;
+  }
 }
 
 .header-avatar {
-border-radius: 50%;
-border: 3px solid #fff;
-margin-left: -15px;
-margin-top: -5px;
-width: 30px;
+  border-radius: 50%;
+  border: 3px solid #fff;
+  margin-left: -15px;
+  margin-top: -5px;
+  width: 30px;
 }
 
 /* footer */
@@ -55,7 +55,7 @@ footer {
 
 /* Users index */
 
-.users {
+.users-index-item {
   list-style: none;
   margin: 0;
   li {
