--- a/app/views/password_reset/edit.html.slim
+++ b/app/views/password_reset/edit.html.slim
@@ -6,7 +6,7 @@ div.row
                url: password_reset_path(@user.password_reset_token),
                html: { class: "form-horizontal",
                        role: "form" }) do |f|
-      = render "shared/error_messages"
+      = render "shared/error_messages", object: f.object
 
       div.form-group
         div.col-sm-9.col-sm-offset-3
