--- a/app/views/users/_fields.html.slim
+++ b/app/views/users/_fields.html.slim
@@ -1,4 +1,4 @@
-= render "shared/error_messages"
+= render "shared/error_messages", object: form.object
 
 div.form-group
   = form.label :name, class: "col-sm-3 control-label"
