--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -1,8 +1,18 @@
 - provide :title, @user.name
 div.row
-  aside.col-sm-4.col-xs-12
+  aside.col-sm-4
     section
       h1
         = gravatar_for @user
         | &nbsp
         = @user.name
+  div.col-sm-8
+    - if @user.microposts.any?
+      h3
+        | Microposts (
+        = @user.microposts.count
+        | )
+      ol.microposts
+        = render @microposts
+
+      = paginate @microposts
