--- a/app/views/shared/_micropost_form.html.slim
+++ b/app/views/shared/_micropost_form.html.slim
@@ -6,8 +6,10 @@
 
   div.form-group
     div.col-xs-12
-      = f.text_area(:content, class: "form-control", rows: 4,
+      = f.text_area(:content, class: "form-control content", rows: 4,
                     placeholder: "Compose new micropost...")
+      span.remaining
+        | 140 characters remaining
 
   div.form-group
     div.col-xs-12
