Add user following

--- a/app/views/microposts/_micropost.html.slim
+++ b/app/views/microposts/_micropost.html.slim
@@ -1,2 +1,3 @@
-li
-  = render "microposts/micropost_base", micropost: micropost
+li.media
+  div.media-body
+    = render "microposts/micropost_base", micropost: micropost
