--- a/app/views/shared/_guest_home.html.slim
+++ b/app/views/shared/_guest_home.html.slim
@@ -4,7 +4,7 @@ div.jumbotron
   p
     | This is the home page for this application.
   p
-    | Its a simple Microbolg.
+    | Its a simple Micropost.
   = link_to("Sign up now!",
             signup_path,
             class: "btn btn-primary btn-lg")
