--- a/app/views/shared/_user_home.html.slim
+++ b/app/views/shared/_user_home.html.slim
@@ -3,6 +3,8 @@ div.row
     section
       = render "shared/user_info"
     section
+      = render "shared/stats"
+    section
       = render "shared/micropost_form"
   div.col-sm-8
     h3
