--- a/app/views/static_pages/contact.html.slim
+++ b/app/views/static_pages/contact.html.slim
@@ -3,5 +3,4 @@ h1
   | Contact
 p
   | My email: 
-  = link_to("me2mailer@gmail.com",
-            "mailto:me2mailer@gmail.com")
+  = mail_to "me2mailer@gmail.com"
