--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -1,18 +1,22 @@
 - provide :title, @user.name
 div.row
   aside.col-sm-4
-    section
-      h1
+    section.media
+      div.pull-left
         = gravatar_for @user
-        | &nbsp
-        = @user.name
+      div.media-body
+        h1.media-heading
+          = @user.name
+    section
+      = render "shared/stats"
   div.col-sm-8
+    = render "follow_form" if signed_in?
     - if @user.microposts.any?
       h3
         | Microposts (
         = @user.microposts.count
         | )
-      ol.microposts
+      ol.media-list
         = render @microposts
 
       = paginate @microposts
