--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -83,28 +83,12 @@ footer {
 
 /* microposts */
 
-.microposts {
-  list-style: none;
-  margin: 10px 0 0 0;
-  padding: 0px;
-
-  li {
-    padding: 10px 0;
-    border-top: 1px solid #e8e8e8;
-  }
-}
-
 .content {
   display: block;
 }
 
 .timestamp {
   color: $gray-light;
-}
-
-.gravatar {
-  float: left;
-  margin-right: 10px;
 }
 
 /* sidebar */
@@ -117,11 +101,6 @@ aside {
       border: 0;
       padding-top: 0;
     }
-    span {
-      display: block;
-      margin-bottom: 3px;
-      line-height: 1;
-    }
     h1 {
       font-size: 1.4em;
       text-align: left;
@@ -129,5 +108,34 @@ aside {
       margin-bottom: 3px;
       margin-top: 0px;
     }
+  }
+}
+
+.stats {
+  overflow: auto;
+  a {
+    float: left;
+    padding: 0 10px;
+    border-left: 1px solid $gray-lighter;
+    color: $gray;
+    &:first-child {
+      padding-left: 0;
+      border: 0;
+    }
+    &:hover {
+      text-decoration: none;
+      color: $brand-primary;
+    }
+  }
+  strong {
+    display: block;
+  }
+}
+
+.user_avatars {
+  overflow: auto;
+  margin-top: 10px;
+  .gravatar {
+    margin: 1px 1px;
   }
 }
