--- a/app/views/microposts/_micropost_base.html.slim
+++ b/app/views/microposts/_micropost_base.html.slim
@@ -4,7 +4,7 @@ span.timestamp
   ' Post
   = time_ago_in_words(micropost.created_at)
   '  ago.
-= link_to_if(current_user?(micropost.user),
-             "delete", micropost, method: :delete,
-                                  data: { confirm: "You sure?" },
-                                  title: micropost.content)
+- if current_user?(micropost.user)
+  = link_to("delete", micropost, method: :delete,
+                                 data: { confirm: "You sure?" },
+                                 title: micropost.content)
