--- a/app/views/shared/_feed_item.html.slim
+++ b/app/views/shared/_feed_item.html.slim
@@ -1,6 +1,7 @@
-li
-  = link_to feed_item.user do
-    = gravatar_for(feed_item.user)
-  span.user
-    = link_to feed_item.user.name, feed_item.user
-  = render "microposts/micropost_base", micropost: feed_item
+li.media
+  = link_to feed_item.user, class: "pull-left" do
+    = gravatar_for feed_item.user
+  div.media-body
+    h5.media-heading
+      = link_to feed_item.user.name, feed_item.user
+    = render "microposts/micropost_base", micropost: feed_item
