--- a/app/views/shared/_user_info.html.slim
+++ b/app/views/shared/_user_info.html.slim
@@ -1,9 +1,11 @@
-= link_to user_path(current_user) do
-  = gravatar_for current_user
-h1
-  = current_user.name
-span
-  = link_to "view my profile", current_user
-span
-  '
-  = pluralize(current_user.microposts.count, "micropost")
+div.media
+  = link_to user_path(current_user), class: "pull-left" do
+    = gravatar_for(current_user, size: 64)
+  div.media-body
+    h1.media-heading
+      = current_user.name
+    ul.list-unstyled
+      li
+        = link_to "view my profile", current_user
+      li
+        = pluralize(current_user.microposts.count, "micropost")
