--- a/app/views/shared/_user_home.html.slim
+++ b/app/views/shared/_user_home.html.slim
@@ -9,4 +9,5 @@ div.row
   div.col-sm-8
     h3
       | Micropost Feed
-    = render "shared/feed"
+    = render "shared/feed"    
+    = render "shared/micropost_modal"
