--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -31,7 +31,7 @@ textarea {
 
 .header-avatar {
   @extend .img-circle;
-  border: 3px solid #fff;
+  border: 2px solid #fff;
   margin-left: -15px;
   margin-top: -5px;
   width: 30px;
@@ -66,21 +66,6 @@ footer {
   }
 }
 
-/* Users index */
-
-.users-index-item {
-  list-style: none;
-  margin: 0;
-  li {
-    overflow: auto;
-    padding: 10px 0;
-    border-top: 1px solid $gray-lighter;
-    &:last-child {
-      border-bottom: 1px solid $gray-lighter;
-    }
-  }
-}
-
 /* microposts */
 
 .content {
@@ -89,6 +74,10 @@ footer {
 
 .timestamp {
   color: $gray-light;
+}
+
+.hover-visiable {
+  display: none;
 }
 
 /* sidebar */
@@ -132,10 +121,10 @@ aside {
   }
 }
 
-.user_avatars {
+.user-avatars {
   overflow: auto;
   margin-top: 10px;
-  .gravatar {
+  .mini-avatar {
     margin: 1px 1px;
   }
 }
