--- a/app/views/microposts/_micropost_base.html.slim
+++ b/app/views/microposts/_micropost_base.html.slim
@@ -1,10 +1,18 @@
 span.content
-  = wrap(micropost.content)
+  = wrap(micropost)
 span.timestamp
   ' Post
   = time_ago_in_words(micropost.created_at)
-  '  ago.
-- if current_user?(micropost.user)
-  = link_to("delete", micropost, method: :delete,
-                                 data: { confirm: "You sure?" },
-                                 title: micropost.content)
+  '
+  ' ago.
+  = content_tag(:a,
+                "Reply",
+                href: "javascript:;",
+                class: "hover-visiable reply-button",
+                data: { name: micropost.user.name })
+  '
+  - if current_user?(micropost.user)
+    = link_to("delete", micropost, method: :delete,
+                                   data: { confirm: "You sure?" },
+                                   title: micropost.content,
+                                   class: "hover-visiable")
