--- a/app/views/password_reset/edit.html.slim
+++ b/app/views/password_reset/edit.html.slim
@@ -31,4 +31,6 @@ div.row
 
       div.form-group
         div.col-sm-10.col-sm-offset-2
-          = f.submit "Reset password", class: "btn btn-info btn-lg"
+          = f.submit("Reset password",
+                     class: "btn btn-info btn-lg",
+                     data: { disable_with: "Please wait..." })
