--- a/app/views/password_reset/new.html.slim
+++ b/app/views/password_reset/new.html.slim
@@ -24,4 +24,5 @@ div.row
       div.form-group
         div.col-sm-10.col-sm-offset-2
           = submit_tag("Send email",
-                       class: "btn btn-info btn-lg")
+                       class: "btn btn-info btn-lg",
+                       data: { disable_with: "Please wait..." })
