--- a/app/views/users/_unfollow.html.slim
+++ b/app/views/users/_unfollow.html.slim
@@ -1,4 +1,6 @@
 = form_for(current_user.relationships.find_by(followed_id: @user.id),
            html: { method: :delete },
            remote: true) do |f|
-  = f.submit "Unfollow", class: "btn btn-lg"
+  = f.submit("Unfollow",
+             class: "btn btn-lg",
+             data: { disable_with: "Please wait..." })
