--- a/app/views/users/edit.html.slim
+++ b/app/views/users/edit.html.slim
@@ -12,7 +12,8 @@ div.row
       div.form-group
         div.col-sm-offset-3.col-sm-9
           = f.submit("Save change",
-                     class: "btn btn-lg btn-primary")
+                     class: "btn btn-lg btn-primary",
+                     data: { disable_with: "Please wait..." })
 
       div.col-sm-offset-3.col-sm-9
         = gravatar_for @user
