--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -27,7 +27,7 @@ div[class="navbar navbar-inverse navbar-fixed-top"
         li
           = link_to "", root_path, class: "glyphicon glyphicon-home btn-lg"
         li
-          = link_to "", help_path, class: "glyphicon glyphicon-question-sign btn-lg"
+          = link_to "", messages_path, class: "glyphicon glyphicon-question-sign btn-lg"
         li
           = link_to help_path do
             = content_tag :span, 42, class: "badge alert-info pull-right"
