--- a/app/views/users/_user.html.slim
+++ b/app/views/users/_user.html.slim
@@ -5,7 +5,7 @@ li.media
       = link_to user.name, user
       - if current_user.admin? && !current_user?(user)
         '  |
-        = link_to('delete',
+        = link_to("delete",
                   user,
                   method: :delete,
-                  data: { confirm: 'Are you sure?' })
+                  data: { confirm: "Are you sure?" })
