--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -27,42 +27,42 @@ div[class="navbar navbar-inverse navbar-fixed-top"
         li
           = link_to "", root_path, class: "glyphicon glyphicon-home btn-lg"
         li
-          = link_to "", messages_path, class: "glyphicon glyphicon-question-sign btn-lg"
-        li
-          = link_to help_path do
-            = content_tag :span, 42, class: "badge alert-info pull-right"
-            = content_tag :span, "", class: "glyphicon glyphicon-envelope btn-lg"
-          - if signed_in?
-            li
-              = link_to("", followers_user_path(current_user),
-                        class: "glyphicon glyphicon-user btn-lg")
-            li.show-micropost-modal
-              = link_to("", "#",
-                        class: "glyphicon glyphicon-pencil btn-lg alert-success",
-                        data: { toggle: "modal", target: "#micropost_modal"})
-            li.dropdown
-              a[href="#"
-                class="dropdown-toggle"
-                data-toggle="dropdown"]
-                /! avatar
-                span
-                  = gravatar_for(current_user,
-                                 size: 30,
-                                 class: "header-avatar")
-                  '
-                  = current_user.name
-                  b.caret
-              ul.dropdown-menu
-                li
-                  = link_to "Profile", current_user
-                li
-                  = link_to("Settings",
-                            edit_user_path(current_user))
-                li.divider
-                li
-                  = link_to("Sign out",
-                            signout_path,
-                            method: "delete")
-          - else
-            li
-              = link_to "Sign in", signin_path
+          = link_to "", help_path, class: "glyphicon glyphicon-question-sign btn-lg"
+        - if signed_in?
+          li
+            = link_to messages_path do
+              = content_tag :span, current_user.unread_message_count, class: "badge alert-info pull-right"
+              = content_tag :span, "", class: "glyphicon glyphicon-envelope btn-lg"
+          li
+            = link_to("", followers_user_path(current_user),
+                      class: "glyphicon glyphicon-user btn-lg")
+          li.show-micropost-modal
+            = link_to("", "#",
+                      class: "glyphicon glyphicon-pencil btn-lg alert-success",
+                      data: { toggle: "modal", target: "#micropost_modal"})
+          li.dropdown
+            a[href="#"
+              class="dropdown-toggle"
+              data-toggle="dropdown"]
+              /! avatar
+              span
+                = gravatar_for(current_user,
+                               size: 30,
+                               class: "header-avatar")
+                '
+                = current_user.name
+                b.caret
+            ul.dropdown-menu
+              li
+                = link_to "Profile", current_user
+              li
+                = link_to("Settings",
+                          edit_user_path(current_user))
+              li.divider
+              li
+                = link_to("Sign out",
+                          signout_path,
+                          method: "delete")
+        - else
+          li
+            = link_to "Sign in", signin_path
