--- a/app/views/messages/_message.html.slim
+++ b/app/views/messages/_message.html.slim
@@ -5,4 +5,4 @@ li.media
       = link_to message.sender.name, message.sender
     = message.content
     '  |
-    = link_to("message(#{@messages_count[message.sender_id]})", message)
+    = links
