header-navigation-bar

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -37,6 +37,16 @@ textarea {
   width: 30px;
 }
 
+.navbar-inverse {
+  height: 51px;
+}
+
+.header-message-alert {
+  top: -43px;
+  position: relative;
+  left: 8px;
+}
+
 /* footer */
 
 footer {
